# DuckDB

./: .gitignore  README.md  comparison_demo.py  duckdb_demo.py  main.py  pandas_demo.py  pyproject.toml  run_demo.py
